--- a/.github/workflows/activity.yml
+++ b/.github/workflows/activity.yml
@@ -14,4 +14,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: Nitish236/github-activity-readme@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACTIVITY_TOKEN }}
